--- a/projects/mona-ui/src/lib/tooltips/popover/components/popover/popover.component.html
+++ b/projects/mona-ui/src/lib/tooltips/popover/components/popover/popover.component.html
@@ -1,12 +1,12 @@
 <ng-template>
     <div class="mona-popover" [attr.data-uid]="uid">
         <div class="mona-popover-content">
-            @if (title || titleTemplateRef) {
+            @if (title() || titleTemplateRef) {
                 <div class="mona-popover-title">
                     @if (titleTemplateRef) {
                         <ng-container [ngTemplateOutlet]="titleTemplateRef"></ng-container>
                     } @else {
-                        <span>{{title}}</span>
+                        <span>{{title()}}</span>
                     }
                 </div>
             }
@@ -20,6 +20,6 @@
             }
         </div>
         <div class="mona-popover-arrow"
-             [ngClass]="{'top':position==='top', 'bottom': position==='bottom', 'left': position==='left', 'right': position==='right'}"></div>
+             [ngClass]="{'top':popupPosition()==='top', 'bottom': popupPosition()==='bottom', 'left': popupPosition()==='left', 'right': popupPosition()==='right'}"></div>
     </div>
 </ng-template>
