refactor: tooltip style updates

--- a/projects/mona-ui/src/lib/tooltips/tooltip/tooltip.component.html
+++ b/projects/mona-ui/src/lib/tooltips/tooltip/tooltip.component.html
@@ -4,6 +4,6 @@
             <ng-content></ng-content>
         </div>
         <div class="mona-tooltip-arrow"
-             [ngClass]="{'top':position==='top', 'bottom': position==='bottom', 'left': position==='left', 'right': position==='right'}"></div>
+             [ngClass]="{'top':position()==='top', 'bottom': position()==='bottom', 'left': position()==='left', 'right': position()==='right'}"></div>
     </div>
 </ng-template>
