--- a/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.scss
+++ b/projects/mona-ui/src/lib/tree-view/components/tree-view/tree-view.component.scss
@@ -1,9 +1,4 @@
-div.mona-tree-view {
-    display: flex;
-    flex-direction: column;
-}
-
-div.mona-tree-view-tree-container {
+.mona-tree-view-tree-container {
     flex: 1;
     overflow: auto;
 }
