--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -813,3 +813,5 @@
 <ng-template #popupContentTemplate2>
     <span style="color: deeppink;">Pink Text Popup Template</span>
 </ng-template>
+
+<!--<mona-window (leftChange)="print($event)"></mona-window>-->
