--- a/projects/mona-ui/src/lib/window/components/window-content/window-content.component.html
+++ b/projects/mona-ui/src/lib/window/components/window-content/window-content.component.html
@@ -1,8 +1,12 @@
 <div class="mona-window-content-container">
-    <div class="mona-window-title-bar" monaWindowDragHandler [draggable]="windowData.draggable" [windowRef]="windowData.windowReference">
+    <div class="mona-window-title-bar" monaWindowDragHandler [draggable]="windowData.draggable"
+         [windowRef]="windowData.windowReference">
         <div class="mona-window-title-container">
-            <span class="mona-window-title" *ngIf="!windowData.titleTemplate">{{windowData.title ?? ''}}</span>
-            <ng-container [ngTemplateOutlet]="windowData.titleTemplate" *ngIf="windowData.titleTemplate"></ng-container>
+            @if (windowData.titleTemplate) {
+                <ng-container [ngTemplateOutlet]="windowData.titleTemplate"></ng-container>
+            } @else {
+                <span class="mona-window-title">{{ windowData.title ?? '' }}</span>
+            }
         </div>
         <div class="mona-window-title-bar-actions">
             <button monaButton class="mona-window-title-bar-action" [flat]="true" (click)="onCloseClick($event)">
@@ -11,41 +15,48 @@
         </div>
     </div>
     <div class="mona-window-content">
-        <ng-container [ngTemplateOutlet]="$any(windowData.content)" *ngIf="contentType==='template'"></ng-container>
-        <ng-container #componentAnchor *ngIf="contentType==='component'"></ng-container>
+        @switch (contentType()) {
+            @case ("template") {
+                <ng-container [ngTemplateOutlet]="$any(windowData.content)"></ng-container>
+            }
+            @case ("component") {
+                <ng-container #componentAnchor></ng-container>
+            }
+        }
     </div>
 
-    <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
-         [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
-         [windowRef]="windowData.windowReference" direction="north" class="mona-window-resizer mona-window-resizer-north"
-         *ngIf="windowData.resizable"></div>
-    <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
-         [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
-         [windowRef]="windowData.windowReference" direction="south" class="mona-window-resizer mona-window-resizer-south"
-         *ngIf="windowData.resizable"></div>
-    <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
-         [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
-         [windowRef]="windowData.windowReference" direction="east" class="mona-window-resizer mona-window-resizer-east"
-         *ngIf="windowData.resizable"></div>
-    <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
-         [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
-         [windowRef]="windowData.windowReference" direction="west" class="mona-window-resizer mona-window-resizer-west"
-         *ngIf="windowData.resizable"></div>
-    <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
-         [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
-         [windowRef]="windowData.windowReference" direction="northeast"
-         class="mona-window-resizer mona-window-resizer-northeast" *ngIf="windowData.resizable"></div>
-    <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
-         [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
-         [windowRef]="windowData.windowReference" direction="northwest"
-         class="mona-window-resizer mona-window-resizer-northwest" *ngIf="windowData.resizable"></div>
-    <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
-         [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
-         [windowRef]="windowData.windowReference" direction="southeast"
-         class="mona-window-resizer mona-window-resizer-southeast" *ngIf="windowData.resizable"></div>
-    <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
-         [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
-         [windowRef]="windowData.windowReference" direction="southwest"
-         class="mona-window-resizer mona-window-resizer-southwest" *ngIf="windowData.resizable"></div>
-
+    @if (windowData.resizable) {
+        <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
+             [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
+             [windowRef]="windowData.windowReference" direction="north"
+             class="mona-window-resizer mona-window-resizer-north"></div>
+        <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
+             [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
+             [windowRef]="windowData.windowReference" direction="south"
+             class="mona-window-resizer mona-window-resizer-south"></div>
+        <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
+             [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
+             [windowRef]="windowData.windowReference" direction="east"
+             class="mona-window-resizer mona-window-resizer-east"></div>
+        <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
+             [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
+             [windowRef]="windowData.windowReference" direction="west"
+             class="mona-window-resizer mona-window-resizer-west"></div>
+        <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
+             [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
+             [windowRef]="windowData.windowReference" direction="northeast"
+             class="mona-window-resizer mona-window-resizer-northeast"></div>
+        <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
+             [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
+             [windowRef]="windowData.windowReference" direction="northwest"
+             class="mona-window-resizer mona-window-resizer-northwest"></div>
+        <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
+             [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
+             [windowRef]="windowData.windowReference" direction="southeast"
+             class="mona-window-resizer mona-window-resizer-southeast"></div>
+        <div monaWindowResizeHandler [minWidth]="windowData.minWidth" [minHeight]="windowData.minHeight"
+             [maxWidth]="windowData.maxWidth" [maxHeight]="windowData.maxHeight"
+             [windowRef]="windowData.windowReference" direction="southwest"
+             class="mona-window-resizer mona-window-resizer-southwest"></div>
+    }
 </div>
