--- a/projects/mona-ui/src/lib/layout/splitter/components/splitter/splitter.component.html
+++ b/projects/mona-ui/src/lib/layout/splitter/components/splitter/splitter.component.html
@@ -1,12 +1,13 @@
-<div class="mona-splitter" [ngClass]="{'mona-splitter-horizontal': orientation==='horizontal', 'mona-splitter-vertical': orientation==='vertical'}">
-    <ng-container *ngFor="let pane of paneList; let px = index;">
-        <div class="mona-splitter-pane" [attr.data-px]="px" [attr.data-pid]="pane.uid"
-             [ngStyle]="{'order': px*2, 'flex-basis': pane.paneSize()}" [ngClass]="{'mona-splitter-static': pane.isStatic, 'mona-splitter-hidden': pane.collapsed}">
-            <ng-container [ngTemplateOutlet]="pane.templateRef" *ngIf="pane.templateRef"></ng-container>
-        </div>
-        <mona-splitter-resizer [orientation]="orientation" [previousResizer]="px===0?null:resizers[px]"
-                               [nextResizer]="px===resizers.length-1?null:resizers[px+1]"
-                               [previousPane]="pane" [panes]="paneList" [ngStyle]="{'order': px*2+1}"
-                               *ngIf="px !== paneList.length-1;"></mona-splitter-resizer>
-    </ng-container>
-</div>
+@for (pane of paneList(); track $index) {
+    <div class="mona-splitter-pane" [attr.data-px]="$index" [attr.data-pid]="pane.uid"
+         [ngStyle]="{'order': $index*2, 'flex-basis': pane.paneSize()}"
+         [ngClass]="{'mona-splitter-static': pane.isStatic(), 'mona-splitter-hidden': pane.collapsed()}">
+        <ng-container [ngTemplateOutlet]="pane.templateRef()"></ng-container>
+    </div>
+    @if ($index !== paneList().length - 1) {
+        <mona-splitter-resizer [orientation]="orientation()" [previousResizer]="$index===0?null:resizerList()?.[$index]??null"
+                               [nextResizer]="$index===resizerCount()-1?null:resizerList()?.[$index+1]??null"
+                               [previousPane]="pane" [panes]="paneList()" [ngStyle]="{'order': $index*2+1}">
+        </mona-splitter-resizer>
+    }
+}
