--- a/projects/mona-ui/src/lib/layout/splitter/components/splitter/splitter.component.scss
+++ b/projects/mona-ui/src/lib/layout/splitter/components/splitter/splitter.component.scss
@@ -1,21 +1,4 @@
-:host {
-    width: 100%;
-    height: 100%;
-}
-
-div.mona-splitter {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    position: relative;
-    flex-direction: row;
-    overflow: hidden;
-    &.mona-splitter-vertical {
-        flex-direction: column;
-    }
-}
-
-div.mona-splitter-pane {
+.mona-splitter-pane {
     flex: 1 1 auto;
     overflow: hidden;
     &.mona-splitter-static {
