--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -1469,6 +1469,19 @@ button[monaButton].mona-input-button {
     }
 }
 
+/** Splitter */
+.mona-splitter {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    overflow: hidden;
+    &.mona-splitter-vertical {
+        flex-direction: column;
+    }
+}
+
 /** Tab Strip */
 .mona-tab-strip {
     width: 100%;
